# dotfiles-tool

./: .dotfiles.conf.example  Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml  test.yml
scripts/: release.sh
src/: error.rs  lib.rs  main.rs
src/backup/: migrate.rs  mod.rs  secrets.rs
src/commands/: doctor.rs  init.rs  mod.rs  setup.rs
src/core/: config.rs  logger.rs  mod.rs  prompt.rs
src/detect/: conflicts.rs  mod.rs  os.rs  tools.rs
src/install/: homebrew.rs  mod.rs  packages.rs  repos.rs  shell.rs  tools.rs  version_manager.rs
src/language/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/symlink/: manual.rs  mod.rs  stow.rs
src/validate/: claude.rs  configs.rs  dependencies.rs  iterm.rs  mod.rs  paths.rs  shell.rs  symlinks.rs
