[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework - argument parsing, subcommands
clap = { version = "4.5", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# Colored terminal output
colored = "2.1"

# Configuration parsing (TOML, JSON, YAML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.5"
glob = "0.3"

# Directories (for home_dir, config_dir)
dirs = "5.0"

# Time handling (for backup timestamps)
chrono = "0.4"

# Regex (for hardcoded path detection)
regex = "1.10"

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
